# XSLTMapper

./: .cursorrules  .gitignore  main.py  pyproject.toml  test_add_mappings_to_human_message.py  test_add_templates_to_human_message.py  test_excel_reader.py  test_llm.py  test_system_message.py
excelutils/: excel_reader.py
llm/: add_mappings_to_human_message.py  add_templates_to_human_message.py  llm.py  system_message.py  system_prompt.txt
mapping_spec/: Mapping Specification.xlsx
